[package]
name = "rsjk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bluez-async = "0.7.1"
byteorder = "1.4.3"
eyre = "0.6.8"
futures = "0.3.26"
pretty_env_logger = "0.4.0"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.2"
zbx_sender = "0.4.1"

[[bin]]
name = "rsjk"
path = "main.rs"
